--- a/XiaomiLocker/Base.lproj/Main.storyboard
+++ b/XiaomiLocker/Base.lproj/Main.storyboard
@@ -17,6 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <toolbar key="tableHeaderView" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="JK0-IP-SdR">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -27,7 +28,9 @@
                                     </connections>
                                 </barButtonItem>
                                 <barButtonItem style="plain" systemItem="flexibleSpace" id="bpk-Bs-8jL"/>
-                                <barButtonItem title="Item" id="RSI-an-Kmg"/>
+                                <barButtonItem title="Item" id="RSI-an-Kmg">
+                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </barButtonItem>
                             </items>
                         </toolbar>
                         <prototypes>
@@ -62,25 +65,19 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="o5F-wI-wOi">
-                        <barButtonItem key="leftBarButtonItem" title="Item" id="AEH-lq-syd">
+                        <barButtonItem key="leftBarButtonItem" title="Item" id="zGf-Ms-huI">
                             <connections>
-                                <action selector="filterBarButtonAction:" destination="H1l-4W-BIK" id="HcR-sN-u98"/>
+                                <action selector="cleanBarButtonAction:" destination="H1l-4W-BIK" id="vCa-jL-yif"/>
                             </connections>
                         </barButtonItem>
-                        <rightBarButtonItems>
-                            <barButtonItem title="Item" id="Iqc-7K-F2H">
-                                <connections>
-                                    <action selector="scanBarButtonAction:" destination="H1l-4W-BIK" id="rG1-ZW-566"/>
-                                </connections>
-                            </barButtonItem>
-                            <barButtonItem title="Item" id="zGf-Ms-huI">
-                                <connections>
-                                    <action selector="cleanBarButtonAction:" destination="H1l-4W-BIK" id="vCa-jL-yif"/>
-                                </connections>
-                            </barButtonItem>
-                        </rightBarButtonItems>
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="Iqc-7K-F2H">
+                            <connections>
+                                <action selector="scanBarButtonAction:" destination="H1l-4W-BIK" id="rG1-ZW-566"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="SkF-YA-EKd">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <connections>
                             <action selector="doRefresh:" destination="H1l-4W-BIK" eventType="valueChanged" id="IsB-YA-vf1"/>
@@ -88,7 +85,6 @@
                     </refreshControl>
                     <connections>
                         <outlet property="cleanBarButton" destination="zGf-Ms-huI" id="a0I-bV-bx9"/>
-                        <outlet property="filterBarButton" destination="AEH-lq-syd" id="vM2-hY-T60"/>
                         <outlet property="payloadBarButton" destination="ZTi-Mv-agk" id="7ZI-YR-pB7"/>
                         <outlet property="scanBarButton" destination="Iqc-7K-F2H" id="Iaa-7Z-lA5"/>
                         <outlet property="statusBarButton" destination="RSI-an-Kmg" id="9Be-mB-VlK"/>
