--- a/XiaomiLocker/Base.lproj/Main.storyboard
+++ b/XiaomiLocker/Base.lproj/Main.storyboard
@@ -62,11 +62,6 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="o5F-wI-wOi">
-                        <barButtonItem key="leftBarButtonItem" title="Item" id="AEH-lq-syd">
-                            <connections>
-                                <action selector="filterBarButtonAction:" destination="H1l-4W-BIK" id="HcR-sN-u98"/>
-                            </connections>
-                        </barButtonItem>
                         <rightBarButtonItems>
                             <barButtonItem title="Item" id="Iqc-7K-F2H">
                                 <connections>
@@ -81,6 +76,7 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="SkF-YA-EKd">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <connections>
                             <action selector="doRefresh:" destination="H1l-4W-BIK" eventType="valueChanged" id="IsB-YA-vf1"/>
@@ -88,7 +84,6 @@
                     </refreshControl>
                     <connections>
                         <outlet property="cleanBarButton" destination="zGf-Ms-huI" id="a0I-bV-bx9"/>
-                        <outlet property="filterBarButton" destination="AEH-lq-syd" id="vM2-hY-T60"/>
                         <outlet property="payloadBarButton" destination="ZTi-Mv-agk" id="7ZI-YR-pB7"/>
                         <outlet property="scanBarButton" destination="Iqc-7K-F2H" id="Iaa-7Z-lA5"/>
                         <outlet property="statusBarButton" destination="RSI-an-Kmg" id="9Be-mB-VlK"/>
