--- a/XiaomiLocker/Base.lproj/Main.storyboard
+++ b/XiaomiLocker/Base.lproj/Main.storyboard
@@ -27,7 +27,9 @@
                                     </connections>
                                 </barButtonItem>
                                 <barButtonItem style="plain" systemItem="flexibleSpace" id="bpk-Bs-8jL"/>
-                                <barButtonItem title="Item" id="RSI-an-Kmg"/>
+                                <barButtonItem title="Item" id="RSI-an-Kmg">
+                                    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </barButtonItem>
                             </items>
                         </toolbar>
                         <prototypes>
